# fertility-sense

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  Makefile  docker-compose.yml  nx.json  package.json  project.json  pyproject.toml
.claude/: settings.json
.claude/commands/: assemble-answer.md  ingest-feed.md  (+2 more)
agents/: answer-assembler.md  competitive-intel.md  deal-manager.md  demand-scout.md  evidence-curator.md  ontology-keeper.md  ops-monitor.md  product-translator.md  rfp-responder.md  safety-sentinel.md  signal-ranker.md
cards/: answer-assembler.yaml  competitive-intel.yaml  deal-manager.yaml  demand-scout.yaml  evidence-curator.yaml  ontology-keeper.yaml  ops-monitor.yaml  product-translator.yaml  rfp-responder.yaml  safety-sentinel.yaml  signal-ranker.yaml
dashboard/: next.config.ts  package-lock.json  package.json
deployments/: com.winfertility.digest-daily.plist  com.winfertility.digest-weekly.plist  com.winfertility.scout.plist  com.winfertility.sequence-run.plist
docs/: OPERATIONS.md
fertility_sense/: __init__.py  __main__.py  api.py  api_errors.py  auth.py  cli.py  config.py  errors.py  log.py  metrics.py  pipeline.py  report.py
scripts/: investor_report.py
tasks/: lessons.md  todo.md
tests/: conftest.py  test_agents.py  test_assembly.py  test_e2e.py  test_feeds.py  test_governance.py  test_integration.py  test_models.py  test_observability.py  test_ontology.py  test_outreach.py  test_pipeline.py  test_resilience.py  test_runtime.py  test_scoring.py  test_security.py  test_smoke.py
(+134 files in other folders)
