[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fertility-sense"
version = "0.1.0"
description = "Fertility and prenatal demand-sensing intelligence platform"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "httpx>=0.27",
    "fastapi>=0.115",
    "uvicorn>=0.30",
    "python-dotenv>=1.0",
    "click>=8.1",
]

[project.optional-dependencies]
feeds = [
    "pytrends>=4.9",
    "praw>=7.7",
    "beautifulsoup4>=4.12",
]
test = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "hypothesis>=6.100",
    "respx>=0.21",
    "pytest-cov>=5.0",
]
dev = [
    "ruff>=0.5",
    "mypy>=1.10",
]

[project.scripts]
fertility-sense = "fertility_sense.cli:main"

[tool.setuptools.packages.find]
include = ["fertility_sense*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "smoke: 5-test heartbeat — <200ms",
    "unit: pure logic, no I/O — <5s",
    "integration: mocked HTTP, real stores — <60s",
    "property: Hypothesis edge-case generation — <2min",
    "e2e: full pipeline — minutes",
    "slow: slow within its tier",
]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.11"
strict = true
